2023-07-20T16:10:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5613352925 # 3495
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-07-20
* notice: query file size: 26017
* notice: accum prev / next / diff: re vi: 0 2717 / 0 2718 / +0 +1

2023-07-19T04:15:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5594937900 # 3486
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-07-19
* notice: query file size: 26017
* notice: accum prev / next / diff: re vi: 0 2715 / 0 2717 / +0 +2

2023-07-16T20:08:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5569566580 # 3472
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-07-16
* notice: query file size: 26017
* notice: accum prev / next / diff: re vi: 0 2712 / 0 2715 / +0 +3

2023-07-16T16:10:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5568615040 # 3471
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-07-16
* notice: query file size: 26017
* notice: accum prev / next / diff: re vi: 0 2708 / 0 2712 / +0 +4

2023-07-15T20:08:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5563985162 # 3466
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-07-15
* notice: query file size: 26017
* notice: accum prev / next / diff: re vi: 0 2707 / 0 2708 / +0 +1

2023-07-14T04:11:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5550381107 # 3456