@@ -1,3 +1,9 @@
+2023-07-20T20:08:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5615429620 # 3496
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-07-20
+* notice: query file size: 26017
+* notice: accum prev / next / diff: re vi: 0 2718 / 0 2719 / +0 +1
+
 2023-07-20T16:10:18Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5613352925 # 3495
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-07-20
